; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/system/ota/native_ota_example/main/extr_native_ota_example.c_diagnostic.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/system/ota/native_ota_example/main/extr_native_ota_example.c_diagnostic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32, i32 }

@GPIO_PIN_INTR_DISABLE = common dso_local global i32 0, align 4
@GPIO_MODE_INPUT = common dso_local global i32 0, align 4
@CONFIG_EXAMPLE_GPIO_DIAGNOSTIC = common dso_local global i64 0, align 8
@GPIO_PULLDOWN_DISABLE = common dso_local global i32 0, align 4
@GPIO_PULLUP_ENABLE = common dso_local global i32 0, align 4
@TAG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [23 x i8] c"Diagnostics (5 sec)...\00", align 1
@portTICK_PERIOD_MS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @diagnostic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @diagnostic() #0 {
  %1 = alloca %struct.TYPE_3__, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @GPIO_PIN_INTR_DISABLE, align 4
  %4 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 4
  store i32 %3, i32* %4, align 4
  %5 = load i32, i32* @GPIO_MODE_INPUT, align 4
  %6 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 3
  store i32 %5, i32* %6, align 8
  %7 = load i64, i64* @CONFIG_EXAMPLE_GPIO_DIAGNOSTIC, align 8
  %8 = shl i64 1, %7
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 0
  store i64 %8, i64* %9, align 8
  %10 = load i32, i32* @GPIO_PULLDOWN_DISABLE, align 4
  %11 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 2
  store i32 %10, i32* %11, align 4
  %12 = load i32, i32* @GPIO_PULLUP_ENABLE, align 4
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %1, i32 0, i32 1
  store i32 %12, i32* %13, align 8
  %14 = call i32 @gpio_config(%struct.TYPE_3__* %1)
  %15 = load i32, i32* @TAG, align 4
  %16 = call i32 @ESP_LOGI(i32 %15, i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str, i64 0, i64 0))
  %17 = load i32, i32* @portTICK_PERIOD_MS, align 4
  %18 = sdiv i32 5000, %17
  %19 = call i32 @vTaskDelay(i32 %18)
  %20 = load i64, i64* @CONFIG_EXAMPLE_GPIO_DIAGNOSTIC, align 8
  %21 = call i32 @gpio_get_level(i64 %20)
  store i32 %21, i32* %2, align 4
  %22 = load i64, i64* @CONFIG_EXAMPLE_GPIO_DIAGNOSTIC, align 8
  %23 = call i32 @gpio_reset_pin(i64 %22)
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @gpio_config(%struct.TYPE_3__*) #1

declare dso_local i32 @ESP_LOGI(i32, i8*) #1

declare dso_local i32 @vTaskDelay(i32) #1

declare dso_local i32 @gpio_get_level(i64) #1

declare dso_local i32 @gpio_reset_pin(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
